# thought-anchors

./: .gitignore  README.md  analyze_rollouts.py  fortress_prompts.jsonl  generate_rollouts.py  llm_endpoints.py  plots.py  prompts.py  pyproject.toml  sentence_scatter_and_ttests.py  step_attribution.py  utils.py
analysis/qwen3_backup/correct_base_solution/variance_analysis/: within_problem_variance.txt
masking_graphs/: interactive_rollout_viz.py  utils.py
masking_graphs/resample/: fireworks_logprobs.py  openrouter_clean.py  together_logprobs.py
misc-experiments/: attribution_benchmark.py  generate_cots.py
notebooks/: va_attention_problem9.ipynb
scripts/: build_web_data.py
web/: app.js  index.html  styles.css
whitebox-analyses/attention_analysis/: receiver_head_funcs.py  tokenizer_funcs.py
whitebox-analyses/pytorch_models/: model_config.py
whitebox-analyses/scripts/: eval_receiver_head_same_sentences.py  generate_rec_csvs.py  plot_attention_heads.py  plot_many_attn_matrices.py  plot_one_attn_matrix.py  plot_rec_taxonomy.py  plot_utils.py  prep_attn_cache.py  prep_suppression_mtxs.py  print_case_study_transcript.py
